Removed extra main tags from the home-page and fixed carousel items size jumping

--- a/_sass/_desktop.sass
+++ b/_sass/_desktop.sass
@@ -160,7 +160,7 @@ $nav-buttons-margin-left: 24px
 					max-width: 400px
 
 	section, header, footer
-		main
+		main, div.main-div
 			max-width: $main-max-width
 
 	.oceanNodes
@@ -219,10 +219,10 @@ $nav-buttons-margin-left: 24px
 	footer
 		padding-left: 100px
 		padding-right: 100px
-		main
+		main, div.main-div
 			max-width: 1400px!important
 	#docs, #common
-		footer main
+		footer main, footer div.main-div
 			max-width: 100%!important
 #common
 	@media screen and (min-width: 1025px)
